--- a/package.json
+++ b/package.json
@@ -1,23 +1,30 @@
 {
   "name": "SWAG + DONUTS",
-  "version": "3.5.1",
+  "version": "3.5.2",
+  "sptVersion": "~3.9.0",
   "main": "src/SWAG.js",
   "license": "MIT",
   "author": "nooky and props",
-  "sptVersion": "~3.9.0",
+  "contributors": [ "Arys" ],
+  "loadBefore": [],
+  "loadAfter": [],
+  "incompatibilities": [],
   "scripts": {
     "setup": "npm i",
-    "build": "node ./packageBuild.ts"
+    "build": "node ./build.mjs",
+    "buildinfo": "node ./build.mjs --verbose"
   },
   "devDependencies": {
-    "@types/node": "16.18.10",
-    "@typescript-eslint/eslint-plugin": "5.46.1",
-    "@typescript-eslint/parser": "5.46.1",
-    "bestzip": "2.2.1",
-    "eslint": "8.30.0",
-    "fs-extra": "11.1.0",
+    "@types/node": "20.11",
+    "@typescript-eslint/eslint-plugin": "7.2",
+    "@typescript-eslint/parser": "7.2",
+    "archiver": "^6.0",
+    "eslint": "8.57",
+    "fs-extra": "11.2",
     "glob": "8.0.3",
-    "tsyringe": "4.7.0",
-    "typescript": "4.9.4"
+    "ignore": "^5.2",
+    "tsyringe": "4.8.0",
+    "typescript": "5.4",
+    "winston": "3.12"
   }
 }
