--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "src/SWAG.js",
   "license": "MIT",
   "author": "nooky and props",
-  "contributors": [ "Arys" ],
+  "contributors": [
+    "Arys"
+  ],
   "loadBefore": [],
   "loadAfter": [],
   "incompatibilities": [],
